--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -35,6 +35,12 @@
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
+      <property name="minimumSize">
+       <size>
+        <width>150</width>
+        <height>0</height>
+       </size>
+      </property>
      </widget>
     </item>
     <item row="0" column="0">
